Fix odd overflow issue on orientation change on iOS devices.

--- a/assets/sass/_styles.scss
+++ b/assets/sass/_styles.scss
@@ -1,4 +1,8 @@
 /************ Basic *************/
+html {
+    width: 100%;
+    overflow: hidden;
+}
 
 body {
     font-family: $serif;
